Create Global Styling

--- a/src/global.css
+++ b/src/global.css
@@ -8,6 +8,64 @@
 @import '$lib/styles/tokens.css';
 @import '$lib/styles/typography.css';
 
-body {
+/* ==================================================
+   RESET STYLES
+================================================== */
+* {
+  /*Sizing*/
+  margin: var(--measurement-spacing-none);
+  padding: var(--measurement-spacing-none);
+  box-sizing: border-box;
+
+  /*Typography*/
+  font-family: "Inter";
+}
+
+/* ==================================================
+   BASE STRUCTURE
+================================================== */
+html {
+  /*Sizing*/
+    height: 100%;
+    width: 100%;
+
+  /*Styling*/
   background-color: var(--color-container-static-plain);
+  color: var(--color-text-static-strong);
+
+  body {
+    /*Sizing*/
+    height: 100%;
+    width: 100%;
+
+    /*Layout*/
+    display: flex;
+    flex-direction: column;
+
+    main {
+      /*Sizing*/
+      width: 100%;
+      flex: 1;
+      margin-top: var(--measurement-componentsize-l);
+
+      /*Layout*/
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      overflow-y: visible;
+      padding: var(--measurement-spacing-none) var(--measurement-spacing-m);
+
+      .main-content {
+        /*Sizing*/
+        width: 100%;
+        flex-grow: 1;
+        max-width: var(--measurement-responsiveness-maxcontentwidth);
+
+        /*Layout*/
+        display: flex;
+        flex-direction: column;
+        padding: var(--measurement-spacing-xxl) var(--measurement-spacing-none);
+      }
+    }
+  }
 }
