--- a/src/lib/components/header/header.css
+++ b/src/lib/components/header/header.css
@@ -21,20 +21,15 @@ header {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  padding: var(--measurement-spacing-none) var(--measurement-spacing-s);
 
   /*Styling*/
   background-color: color-mix(in srgb, var(--color-container-static-plain) 80%, transparent);
   backdrop-filter: blur(8px);
 
-  /*Animation*/
-  transition: height 0.4s ease;
-
-
   .header-content {
     /*Sizing*/
     width: 100%;
-    max-width: var(--measurement-responsiveness-maxcontentwidth);
+    max-width: calc(var(--measurement-responsiveness-maxcontentwidth) + 28px);
 
     /*Layout*/
     display: flex;
@@ -117,7 +112,7 @@ header {
         /*Layout*/
         padding: var(--measurement-spacing-xs) var(--measurement-spacing-s);
         margin-top: 8px;
-        margin-right: var(--measurement-spacing-xs);
+        margin-right: var(--measurement-spacing-s);
         margin-bottom: 8px;
 
         /*Styling*/
@@ -126,6 +121,10 @@ header {
         background-color: var(--color-container-static-plain);
         border-radius: var(--measurement-radius-s);
         border-color: var(--color-border-static-low);
+
+        &:hover {
+          cursor: pointer;
+        }
       }
 
       button {
@@ -164,8 +163,196 @@ header {
       }
     }
 
+    .search-menu {
+      /*Sizing*/
+      width: 100%;
+      height: 100vh;
+
+      /*Layout*/
+      position: absolute;
+      top: var(--measurement-spacing-xl);
+      padding: var(--measurement-spacing-xxl) var(--measurement-spacing-m);
+      display: flex;
+      justify-content: center;
+
+
+      /*Styling*/
+      background-color: var(--color-container-static-plain);
+
+      .search-menu-content {
+        /*Sizing*/
+        width: 100%;
+        max-width: var(--measurement-responsiveness-maxcontentwidth);
+
+        /*Layout*/
+        display: flex;
+        flex-direction: column;
+        gap: var(--measurement-spacing-xl);
+
+
+        .search-wrapper {
+          /*Sizing*/
+          width: 100%;
+          height: var(--measurement-componentsize-l);
+
+          /*Layout*/
+          display: flex;
+          flex-direction: row;
+          justify-content: start;
+          align-items: center;
+          gap: var(--measurement-spacing-s);
+
+          svg {
+            /*Sizing*/
+            width: var(--measurement-iconsize-l);
+            height: var(--measurement-iconsize-l);
+
+            /*Styling*/
+            fill: var(--color-shape-static-medium);
+          }
+
+          .search-input {
+            /*Sizing*/
+            width: 100%;
+
+            /*Styling*/
+            appearance: none;
+            border: none;
+            color: var(--color-text-static-strong);
+
+            &:focus {
+              /*Styling*/
+              outline: none;
+            }
+
+            &::placeholder {
+              /*Styling*/
+              color: var(--color-text-static-low);
+            }
+          }
+
+          .clear-search-input {
+
+            /*Sizing*/
+            width: var(--measurement-componentsize-l);
+            height: var(--measurement-componentsize-l);
+
+            /*Layout*/
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+
+            /*Styling*/
+            border: none;
+            background-color: transparent;
+
+            &:hover {
+              cursor: pointer;
+            }
+
+            svg {
+              /*Sizing*/
+              width: var(--measurement-iconsize-m);
+              height: var(--measurement-iconsize-m);
+
+              /*Styling*/
+              fill: var(--color-shape-static-medium);
+            }
+
+          }
+        }
+
+        .search-results {
+          /*Layout*/
+          display: flex;
+          flex-direction: column;
+
+          .search-result-title {
+            /*Styling*/
+            color: var(--color-text-static-low);
+
+            /*Layout*/
+            padding-bottom: var(--measurement-spacing-s);
+          }
+
+          .quickstart-item {
+            /*Layout*/
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            gap: var(--measurement-spacing-s);
+
+            svg {
+              /*Sizing*/
+              width: var(--measurement-iconsize-m);
+              height: var(--measurement-iconsize-m);
+
+              /*Styling*/
+              fill: var(--color-shape-static-strong);
+            }
+
+            a {
+              /*Sizing*/
+              width: 100%;
+              height: var(--measurement-componentsize-m);
+
+              display: flex;
+              justify-content: start;
+              align-items: center;
+
+              /*Styling*/
+              text-decoration: none;
+              color: var(--color-text-static-strong);
+            }
+          }
+        }
+      }
+    }
+
     .mobile-menu {
       display: none;
+    }
+  }
+}
+
+header.is-menu-open {
+  .header-content {
+    .actions {
+      .locale {
+        display: none;
+      }
+
+      .search {
+        display: none;
+      }
+
+      .theme {
+        display: none;
+      }
+    }
+  }
+}
+
+header.is-search-open {
+  .header-content {
+    .navigation {
+      display: none;
+    }
+
+    .actions {
+      .locale {
+        display: none;
+      }
+
+      .search {
+        display: none;
+      }
+
+      .theme {
+        display: none;
+      }
     }
   }
 }
@@ -173,11 +360,8 @@ header {
 /* ==================================================
    MOBILE
 ================================================== */
-@media (max-width: 800px) {
+@media (max-width: 960px) {
   header {
-
-    /*Animation*/
-    transition: height 0.4s ease;
 
     .header-content {
 
@@ -203,7 +387,7 @@ header {
               /*Sizing*/
               position: relative;
               width: 18px;
-              height: 1.5px;
+              height: 2px;
 
               /*Styling*/
               position: relative;
@@ -215,51 +399,77 @@ header {
 
               &:first-child {
                 /*Layout*/
-                top: 6px;
+                top: 5px;
                 left: 1px;
               }
 
               &:last-child {
                 /*Layout*/
-                top: 12px;
+                top: 11px;
                 left: 1px;
               }
             }
           }
         }
 
-        .burger-menu.is-open {
+        .burger-menu:is(.is-menu-open, .is-search-open) {
           .line {
 
             &:first-child {
               /*Layout*/
               transform: rotate(45deg);
-              top: 9.6px;
+              top: 9px;
               left: 1px;
             }
 
             &:last-child {
               /*Layout*/
               transform: rotate(-45deg);
-              top: 8px;
+              top: 7px;
               left: 1px;
             }
           }
         }
       }
-    }
-  }
 
-  header.is-open {
-    /*Sizing*/
-    height: 100vh;
+      .mobile-menu {
+        /*Sizing*/
+        width: 100%;
+        height: 100vh;
 
-    .mobile-menu {
-      /*Layout*/
-      transform: translateY(0);
+        /*Layout*/
+        position: absolute;
+        top: var(--measurement-spacing-xl);
+        padding: var(--measurement-spacing-xxl) var(--measurement-spacing-m);
+        display: flex;
 
-      /*Styling*/
-      opacity: 1;
+        /*Styling*/
+        background-color: var(--color-container-static-plain);
+
+        nav {
+          /*Sizing*/
+          width: 100%;
+
+          /*Layout*/
+          display: flex;
+          flex-direction: column;
+          gap: var(--measurement-spacing-s);
+
+          a {
+            /*Sizing*/
+            height: var(--measurement-componentsize-l);
+
+            /*Layout*/
+            display: flex;
+            justify-content: start;
+            align-items: center;
+
+            /*Styling */
+            text-decoration: none;
+            color: var(--color-text-static-strong);
+          }
+        }
+      }
     }
   }
 }
